--- a/powershell-alias/README.adoc
+++ b/powershell-alias/README.adoc
@@ -3,6 +3,8 @@
 == Installation
 The file link:profile.ps1[profile.ps1] should be located in `$Home\[My] Documents\\WindowsPowerShell\` directory to be accessed by the current user (other locations can be used in order to be accessed by other users).
 
+Aliases depend on modules describe link:../powershell-modules[here].
+
  * link:location.adoc[Location]
  * link:java.adoc[Java]
  * link:maven.adoc[Maven]
