--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,3 @@
 = Windows tips
 
-Some documentation about me using Windows (powershell aliases, run on startup, ...)
+Some documentation about my use of Windows (powershell, run on startup, ...)
